# aws-cost-reporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd-test.yaml  cd.yaml  ci-cd.yaml  ci.yaml
src/: aws_cost_report_lambda.py
tf/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
tf/tfvars/: ci-cd.prd.tfvars  local.dev.tfvars
