[project]
name = "aws-cost-report-lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "boto3>=1.37.13",
    "ruff>=0.11.0",
]
